Basic E2E working plugin (#9)
* Create initial plugin impl draft

* ignore test

* remove maxEventsPerBatch

* remove maxEventsPerBatch

* remove millis conversion to int

* rename classes

* LogstashLAHandlerEvent belongs to the plugin, not LAEventsHandler

* fix import

* save all

* Create TokenCredentialFactory, support secrets

* add configuration values in the config file

* update container's gradle to be the same as the current working gradle

* build.gradle for container build still needs some extra stuff

* plugin running, wrong events conversion and not sending to LA

* remove secret

* add secret

* first working run!

* cr comments

* cr comments

* cr comments

---------

Co-authored-by: Roei Dimi <roeid@microsoft.com>